--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ python-multipart = "^0.0.6"
 google-auth = "^2.25.2"
 python-jose = "^3.3.0"
 pydantic-settings = "^2.1.0"
+aiohttp = "^3.9.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.11.0"
